src/__tests__/golden/k8s/nginx-env-secret.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: stapelwerk
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: nginx-config
  namespace: stapelwerk
data:
  NGINX_HOST: stapelwerk.local
---
apiVersion: v1
kind: Secret
metadata:
  name: nginx-secret
  namespace: stapelwerk
type: Opaque
data:
  API_KEY: czNjcjN0
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: stapelwerk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          envFrom:
            - configMapRef:
                name: nginx-config
            - secretRef:
                name: nginx-secret
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: stapelwerk
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: http
      port: 80
      targetPort: 80
